nginx/00-namespace-and-networkpolicy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    canAccessDevNamespace: "true"
    canAccessProdNamespace: "true"
spec:
  finalizers:
  - kubernetes
---
