nginx/02-test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: test-ingress
  namespace: kube-system
spec:
  rules:
    - host: test-ingress.strix.co.kr
      http:
        paths:
          - backend:
              serviceName: default-http-backend
              servicePort: 80
            path: /
  tls:
    - hosts:
        - test-ingress.strix.co.kr
      secretName: test-ingress-tls
